fixed line spacing issues leading to text overlap

--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,19 @@ h1 {
 }
 
 p {
+	width: 100%;
 	font-size: 17px;
-	line-height: 2px;
+	line-height: 1.5;
 	letter-spacing: 1px;
+
 }
 
 body {
+	width: 100%;
 	margin: 0 auto;
 	padding: 0 20px 20px 20px;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
 }
 
 .button-link{
